# owlbear-lang

./: .gitignore  .isort.cfg  .pre-commit-config.yaml  README.md  notes.md  notes.txt  pylama.ini  rebar.config
apps/baron/: rebar.config
apps/baron/src/: baron.app.src
bareAST/: notes.md  runtime-capabilities.md  setup.cfg
bareAST/bare/: __init__.py  arithmetic.py  block.py  commutative.py  compare.py  error.py  expression.py  function.py  module.py  scope.py  shortcircuit.py
bareAST/bare2/: block.py  codegen.py  expression.py  let.py  maths.py  scope.py  varargs.py
construct/: README.md
docs/: expr.if.md  expr.with.md  functions.md  incoming.md  llvm_names.md  module.md  modules.md  namespaces.md  syntax.md  types.md
example/: module.yml  simple0.owl  simple1.owl  tokens.txt
lang1/apps/beamy/: rebar.config
lang1/apps/beamy/src/: beamy.app.src
lang1/docs/: expr.case.md  incoming.md
lang1/lib/beamtools/src/: tokens.erl  typexpr.erl
lang1/tests/pp/: test1.erl
lang3/: parser.py
lang4/: notes.txt  setup.cfg
lang5/: morenotes.txt  notes.txt  typeparser.py
lib/beamtools/src/: .gitignore  beamtools.app.src  miscutils.erl  parser_epp.yrl  preprocessor.erl  stdforms.erl  tokens.erl  tokstream.erl  type.erl  typecheck.erl  typedforms.erl
lib/consoletools/src/: consoleapp.erl  consoletools.app.src
llvmtest/: example.c  example.ll  example2.c  example2.ll
owl/: setup.cfg
owl/owl/: cli.py  filter.py  parser.py  scanner.py  token.py
pacman/: README.md
python-poc/: .pre-commit-config.yaml  .setupmeta.version  setup.cfg
python-poc/bare/: __init__.py  arithmetic.py  commutative.py  compare.py  composite.py  expression.py  functioncall.py  module.py  scope.py  statement.py  target.py  typexpr.py
python-poc/owlbear/: cli.py  parser.py  scanner.py  token.py
src/: absform.erl  baron.app.src  baron.erl  base.erl  beamy.erl  type.erl
tests/pp/: ifdef_in_fun.erl  test1.erl
