
[metadata]
name = owlbear
author = Michael Fagan
author_email = michael.charles.fagan@gmail.com
license = Apache 2.0
description = language frontend
keywords = development, language
url = https://github.com/badmonkey/owlbear-lang
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache License
    Programming Language :: Python :: 3.8
    Private :: Do Not Upload to pypi server

[options]
versioning=dev
python_requires = >=3.8
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    = .
install_requires =
    click
    spark-parser
    llvmlite

    pre-commit
    black
    pylama
    isort
    pylint
    mccabe


[options.entry_points]
console_scripts =
    owlcli = owlbear.cli:init


[bdist_wheel]
universal = 0


[isort]
line_length=100
multi_line_output=3
include_trailing_comma=true


[pylama]
format = pylint
max_line_length = 100
skip = .env/*,.venv/*,.eggs/*,tmp/*,setup.py
linters = pyflakes,mccabe,pylint
ignore = C0111,C0301,C0330,C0411,C0412,C0414,R0201,R0902,R0903,W0223,W0511,W0603,W1201,W1202,W1203

[pylama:pyflakes]
builtins = _,public

[pylama:pylint]
max_line_length = 100
dummy-variables-rgx = _.*
additional-builtins = public
init-import = no
variable-rgx=[a-z_][a-z0-9_]{0,30}$
argument-rgx=[a-z_][a-z0-9_]{0,30}$
