
[metadata]
name = owlbear
author = Michael Fagan
author_email = michael.charles.fagan@gmail.com
license = Apache 2.0
description = language frontend
keywords = development, language
url = https://github.com/badmonkey/owlbear-lang
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache License
    Programming Language :: Python :: 3.8
    Private :: Do Not Upload to pypi server

[options]
versioning=dev
python_requires = >=3.8
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    = .
install_requires =
    click
    spark-parser
    llvmlite

    pre-commit
    black
    pylama
    isort
    pylint
    mccabe

[options.entry_points]
console_scripts =
    owlcli = owlbear.cli:init

[bdist_wheel]
universal = 0
